--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "color-thief-react": "2.1.0",
+    "react-scripts": "5.0.0"
   }
 }
