--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
+    "color-thief-react": "2.1.0",
+    "colorthief": "^2.4.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.6",
-    "color-thief-react": "2.1.0",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "typescript": "5.1.6"
   }
 }
