--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -17,6 +17,9 @@ permissions:
   contents: read
   pages: write
   id-token: write
+  actions: write
+  checks: write
+  deployments: write
 
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
@@ -93,3 +96,5 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
+env:  
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
