--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/node": "^20.5.1"
   }
 }
